:wrench: (firebase) add auth package

--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,28 @@
       });
     }
   </script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyCzitIvOnEDg6Vfbhl9vA_n5Jrj7XSs7m4",
+      authDomain: "snake-69694.firebaseapp.com",
+      databaseURL: "https://snake-69694.firebaseio.com",
+      projectId: "snake-69694",
+      storageBucket: "snake-69694.appspot.com",
+      messagingSenderId: "12235615051",
+      appId: "1:12235615051:web:b777d852eab327b26b56ce"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>w
+  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
