--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
+  <meta name="google-signin-client_id" content="12235615051-bn9ijdqvue3dv0e396os5clu0psfct02.apps.googleusercontent.com" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="SnakeFlutter">
@@ -26,8 +27,9 @@
     }
   </script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-auth.js"></script>
+  
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
@@ -45,8 +47,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
-  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>w
-  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
+
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
